Fix alignment issue when 2 rows of card resources are displayed. Change the default user image

--- a/styles/user_index.scss
+++ b/styles/user_index.scss
@@ -13,17 +13,17 @@ body {
 .profile-img {
   display: inline-block;
   position: relative;
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   overflow: hidden;
   border-radius: 50%;
-  border: 2px solid white;
+  border: 3px solid white;
 }
 
 .profile-img img {
   width: auto;
   height: 100%;
-  margin-left: -40px;
+  // background-color: rgb(175, 175, 175);
 }
 
 .card-deck {
@@ -33,10 +33,12 @@ body {
   justify-content: space-evenly;
 }
 
+.col {
+  margin: 10px 10px;
+}
 .card {
   width: 350px;
   height: 100%;
-  margin: 10px 10px;
 }
 
 a:link {
